package edu.fiuba.algo3.modelo;

public class Mision {


    public Boolean plazoExcedido(Reloj reloj) {
        return false;
    }
}
