@startuml
class Edificio {
- contadorVisitas: int
- nombre: String
+ visitar(r : Reloj): Pista
}

class Ciudad {
    + visitar(edificio : String, r : Reloj): Pista
}

class Jugador {
    + visitar(edificio:String, r : Reloj): Pista
}

class Novato

class Mision{
    - fechaLimite: DateTime
    + plazoExcedido(r : Reloj): bool
}

class Reloj{
    - fechaActual: DateTime
    + incrementar(horas : int): void
    + esMayor(fecha : DateTime): bool
}

class Pista {
    - contenido: String
    + mostrar(): String
}
Jugador -->"1" Ciudad: está
Novato --|> Jugador
Detective --|> Jugador
Jugador o--"1" Mision: tiene
Ciudad o-- "3" Edificio
Edificio ..> Reloj: actualiza
Edificio --> "1" Pista
Mision ..> Reloj

@enduml
